gipfel ChangeLog
=================

gipfel-0.1.3
 - Add stitching mode (gipfel -s). See README  for details.
 - Update datafile from http://www.alpin-koordinaten.de
 - Fix various bugs.

gipfel-0.1.2
 - Fix bugs for "Normal Projection" and "Panoramic Projection" mode.
   Panorama mode now works with the great view from Mount Everest by
   Roddy Mackenzie (google for mackenzie everest panorama).
 - Add variable width display of GPS tracks (depending on the distance).
 - Add heuristics for hidden object detection.
 - Switch to fltk "plastic" scheme as it looks better.

gipfel-0.1.1
 - Don't try to display invisible trackpoints.
 - Fix bug in "Normal Projection" code for wide angle images.
 - Avoid complete redraw when moving mountains to reduce flicker.

gipfel-0.1.0
 - Display of GPS-tracks.
   GPS-tracks e.g. those that can be downloaded from www.alpin-koordinaten.de
   ("Fugawi 3 TXT" format) or self-recored ones, can be projected 
   on your digital images!
 - Load/save perspective data from/to JPEG comment section.
   This means, that you can create and share "gipfel-enabled" images. 
   Whenever you want, you can use these images and e.g. display your 
   GPS-tracks on them, without further fiddling to find the view parameters.
 - Experimental support for panorama images.
   gipfel can now handle images with panoramic projection. Check the
   "Options" menu entry.
 - Data file from www.alpin-koordinaten.de
   With the kind permission of the guys from www.alpin-koordinaten.de, the
   gipfel tarball now contains a default datafile with more than 6000 entries
   from around the world.
 - Duplicate GPS entry elimation.
 - Show parameter values in control window.
   No need to choose your viewpoint on the commandline. Use the new 
   "peak-choosing" widget to find your viewpoint interactively.
 - Choose viewpoint via GUI.
 - Improved label placement.

gipfel-0.0.1
 - Initial version.