@@ -1,5 +1,12 @@
 gipfel ChangeLog
 =================
+gipfel-0.2.0
+ - Change orientation format in jpeg header to make it independent
+   of the image size. One can now scale an already oriented image
+   without invalidating the orientation information.
+ - gipfel now tries to find a reasonable default for the scale value
+   when opening new images based on the "Focal Length In 35mm" Exif 
+   tag, if it exists.
 
 gipfel-0.1.3
  - Add stitching mode (gipfel -s). See README  for details.
